password-generator/k8s-manifests/password-generator.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: password-generator
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: password-generator
      app.kubernetes.io/instance: password-generator
  template:
    metadata:
      labels:
        app.kubernetes.io/name: password-generator
        app.kubernetes.io/instance: password-generator
    spec:
      serviceAccountName: default
      securityContext: {}
      containers:
        - name: password-generator
          image: "ahsanemon/password-generator:0.3.2"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: password-generator
  labels:
    app.kubernetes.io/name: password-generator
    app.kubernetes.io/instance: password-generator
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: password-generator
    app.kubernetes.io/instance: password-generator
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: password-generator
  labels:
    app.kubernetes.io/name: password-generator
    app.kubernetes.io/instance: password-generator
spec:
  ingressClassName: nginx
  rules:
    - host: "password.example.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: password-generator
                port:
                  number: 80
